2.0.0 from https://github.com/TheRealAgentK/raygun4cfml/tree/master (#64)